--- a/tier/index.html
+++ b/tier/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="icon" type="image/x-icon" href= "../icon.png"/>
-	<title>Tier List Maker - Smash Apps</title>
+	<title>Tier List Maker - ARMS Apps</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,100italic" rel="stylesheet" type="text/css">
 	<link href="newstyle.css" rel="stylesheet">
 	<link href="dragula.min.css" rel="stylesheet">
