--- a/tier-a/index.html
+++ b/tier-a/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="controls">
-		<h1>TIER LIST MAKER - <span>neat</span></h1>
+		<h1>TIER LIST MAKER - <span>ARMS</span></h1>
 		<div id="buttons">
 			<button id="screenshot">Share</button>
 			<button id="hidebuttons">Hide controls</button>
